[package]
name = "web_scanner"
version = "0.1.4"
edition = "2021"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json", "gzip", "stream", "blocking", "rustls-tls"] }
scraper = "0.24.0"
url = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
csv = "1.4.0"
futures = "0.3"
robots_txt = "0.7.0"   # optional
anyhow = "1.0"       # error handling
clap = { version = "4.5.49", features = ["derive"] }
regex = "1.12.2"
indicatif = "0.18.0"
ipnet = "2.9"
trust-dns-resolver = { version = "0.23", default-features = false, features = ["tokio-runtime"] }
rand = "0.9.2"
rand_chacha = "0.9.0"
humantime = "2.1"
tracing = "0.1.41"
sha1 = "0.10.6"
openssl = "0.10.74"
tokio-openssl = "0.6.5"
colored = "3.0.0"
atty = "0.2.14"
